--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -52,10 +52,10 @@ jobs:
           docker build -t student-service services/student
 
       # Push Docker images to Docker Hub (or another registry)
-      - name: Push Docker Images
-        run: |
-          docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-          docker push examination-service
-          docker push attendance-service
-          docker push faculty-service
-          docker push student-service
+       - name: Push Docker Images
+  run: |
+    echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+    docker push examination-service
+    docker push attendance-service
+    docker push faculty-service
+    docker push student-service
