--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -17,7 +17,7 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v2
 
-      # Set up Docker Buildx (Setting Up)
+      # Set up Docker Buildx (Setting)
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
