Added CI/CD Workflows K8 Part

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -14,9 +14,9 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v2
 
-      # Set up kubectl
+      # Set up kubectl (using the correct version)
       - name: Set up kubectl
-        uses: google-github-actions/setup-kubectl@v0.3.0
+        uses: google-github-actions/setup-kubectl@v0.4.0
 
       # Decode Kubernetes config and create kubeconfig
       - name: Create Kubeconfig
