Added CI/CD Workflows K8 Part

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -8,15 +8,15 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    
+
     steps:
       # Checkout the repository
       - name: Checkout Repository
         uses: actions/checkout@v2
 
-      # Set up kubectl (using the correct version)
+      # Set up kubectl (using Azure's setup-kubectl action)
       - name: Set up kubectl
-        uses: google-github-actions/setup-kubectl@v0.4.0
+        uses: Azure/k8s-actions/setup-kubectl@v1
 
       # Decode Kubernetes config and create kubeconfig
       - name: Create Kubeconfig
